<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MainActivity" app:layoutDescription="@xml/activity_main_scene">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="16dp" android:textSize="38dp" android:text="@string/app_name" android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1" android:textColor="@android:color/black" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView android:id="@+id/cardMlKit" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" app:cardBackgroundColor="@color/colorMLKitCard" app:cardElevation="10dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvTitle" app:shapeAppearance="@style/CardShape">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:adjustViewBounds="true" android:contentDescription="@string/scanner_library" android:src="@drawable/mlkit_icon"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="14dp" android:padding="16dp" android:text="@string/scan_with_ml_kit" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView android:id="@+id/cardZxing" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" app:cardBackgroundColor="@color/colorZxingCard" app:cardElevation="10dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/cardMlKit" app:shapeAppearance="@style/CardShape">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:adjustViewBounds="true" android:contentDescription="@string/scanner_library" android:src="@drawable/zxing"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:padding="16dp" android:textSize="16dp" android:text="@string/scan_with_zxing" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <TextView android:id="@+id/tv_developer" style="@style/TextAppearance.MaterialComponents.Body1" android:layout_width="0dp" android:layout_height="wrap_content" android:gravity="center_horizontal" android:padding="16dp" android:textSize="12dp" android:text="@string/developed_by_maulik_hirani" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.motion.widget.MotionLayout>